[project]
name = "cron-parser"
version = "0.1.0"
description = "Cron parser"
authors = [
    {name = "Remi Pham"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
